--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,10 +36,9 @@
         </activity>
         <activity
             android:name="ro.pub.cs.radar.MapActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_map"
-            android:parentActivityName="ro.pub.cs.radar.MainActivity"
-            android:theme="@style/FullscreenTheme" >
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:parentActivityName="ro.pub.cs.radar.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ro.pub.cs.radar.MainActivity" />
